--- a/pagina_del_acoso2.html
+++ b/pagina_del_acoso2.html
@@ -30,7 +30,7 @@ como los comportamientos desafiantes u hostiles que provocan la ruptura de organ
 individuales y grupales dentro y fuera del salón de clases afectando las relaciones interpersonales y el desarrollo sano de las y los alumnos.</li></font></pre>
 <center><img src="https://c0.klipartz.com/pngpicture/375/265/sticker-png-school-bullying-cartoon-ji-child-hand-friendship-toddler-human.png" alt="Descripción de la imagen" height="250" width="250">
 <p><center>
-<button onclick="location.href='pagina_del_acoso.html'">PAGINA PRINCIPAL</button>
+<button onclick="location.href='index.html'">PAGINA PRINCIPAL</button>
 <button onclick="location.href='pagina_del_acoso3.html'">PAGINA 3</button>
 </p>
 </body>
