--- a/pagina_del_acoso3.html
+++ b/pagina_del_acoso3.html
@@ -23,5 +23,5 @@ Para que se considere acoso escolar, debe presentar las siguientes característi
 <li><b><center><p style="color: white; font-weight: bold; font-size: xx-large;"><font size="5">Repetición y sistematicidad</b>. <center><p style="color: white; font-weight: bold; font-size: xx-large;"><font size="5">Es la actitud que se repite constantemente con el propósito de vulnerar la condición física y emocional del alumno. Asimismo, viola los valores sociales y las conductas establecidos dentro de la escuela.</li></pre></font>
 <center><img src="https://image.freepik.com/vector-gratis/concepto-acoso-escolar-diseno-plano-personajes_23-2148715155.jpg" alt="Descripción de la imagen" height="250" width="250">
 <p><center>
-<button onclick="location.href='pagina_del_acoso.html'">PAGINA PRINCIPAL</button>
+<button onclick="location.href='index.html'">PAGINA PRINCIPAL</button>
 <button onclick="location.href='pagina_del_acoso2.html'">PAGINA 2</button></p>
