--- a/pagina_del_acoso2.html
+++ b/pagina_del_acoso2.html
@@ -13,7 +13,7 @@ body{
 </head>
 <body><center><p style="color: blue; font-weight: bold; font-size: xx-large;"><marquee>Que es el acoso escolar?</marquee></center> </p></body> 
 <body><font size="5">
-<pre>Se consideran tres tipos de acoso:
+<pre><p style="color: white; font-weight: bold; font-size: xx-large;">Se consideran tres tipos de acoso:
 
 
 <li><b><center><p style="color: white; font-weight: bold; font-size: xx-large;"><font size="5">Acoso verbal</b>: <center><p style="color: white; font-weight: bold; font-size: xx-large;"><font size="5">Consiste en expresar de manera directa o indirecta entre las alumnas y/o alumnos palabras desagradables o agresivas cuya intención sea humillar, 
